# open-orchestrator

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: design.md
src/open_orchestrator/: __init__.py  agent.py  config.py  display.py  main.py  orchestrator.py  permissions.py
src/open_orchestrator/tools/: __init__.py  bash_tool.py  file_tools.py  search_tools.py  task_tool.py
tests/: test_config.py  test_permissions.py  test_registry.py  test_tools.py
